CLOSED FIXED Bug 36742
compilation on gcce for Symbian fails
https://bugs.webkit.org/show_bug.cgi?id=36742
Summary compilation on gcce for Symbian fails
t.zander
Reported 2010-03-29 01:14:13 PDT
gcc for Symbian doesn't support gcc extensions like atomicity.h and fails on including them.
Attachments
Proposed fix (961 bytes, patch)
2010-03-29 01:18 PDT, t.zander
no flags
Proposed fix (1.32 KB, patch)
2010-03-29 01:44 PDT, t.zander
hausmann: review+
hausmann: commit-queue-
t.zander
Comment 1 2010-03-29 01:18:42 PDT
Created attachment 51881 [details] Proposed fix JavaScriptCore/wtf/Threading.h: gcc for Symbian doesn't support gcc extensions like atomicity.h - disable
WebKit Review Bot
Comment 2 2010-03-29 01:24:24 PDT
Attachment 51881 [details] did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 Total errors found: 0 in 0 files If any of these errors are false positives, please file a bug against check-webkit-style.
t.zander
Comment 3 2010-03-29 01:44:56 PDT
Created attachment 51884 [details] Proposed fix
WebKit Review Bot
Comment 4 2010-03-29 01:45:53 PDT
Attachment 51884 [details] did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 Total errors found: 0 in 0 files If any of these errors are false positives, please file a bug against check-webkit-style.
t.zander
Comment 5 2010-03-29 01:53:02 PDT
running it locally shows no problems, not sure how to fix then :( WebKitTools/Scripts/check-webkit-style Total errors found: 0 in 2 files
Simon Hausmann
Comment 6 2010-03-29 02:06:25 PDT
Comment on attachment 51884 [details] Proposed fix Looks good to me. I'll land it manually.
Simon Hausmann
Comment 7 2010-03-29 02:08:26 PDT
(In reply to comment #6) > (From update of attachment 51884 [details]) > Looks good to me. I'll land it manually. (Manual because the patch doesn't apply with the standard tools, missing context it seems)
Simon Hausmann
Comment 8 2010-03-29 02:11:11 PDT
Simon Hausmann
Comment 9 2010-03-29 02:17:01 PDT
Revision r56712 cherry-picked into qtwebkit-2.0 with commit 2b6255889c50a45035c045fd4575590f57887848
Eric Seidel (no email)
Comment 10 2010-03-31 17:19:17 PDT
Build 4429 (r56712) was the first to show failures: set([u'fast/js/kde/string-1-n.html', u'fast/js/kde/string-2-n.html']) Suspect revisions: r56712: http://trac.webkit.org/changeset/56712 Bug: 36742 (https://bugs.webkit.org/show_bug.cgi?id=36742) Author: "Thomas Zander" <t.zander@nokia.com> Reviewer: "Simon Hausmann" <hausmann@webkit.org> Committer: "Simon Hausmann" <hausmann@webkit.org> It appears this change caused a failure on teh Gtk 32-bit debug bot.
Note You need to log in before you can comment on or make changes to this bug.