https://bugs.webkit.org/show_bug.cgi?id=36742

Patch by Thomas Zander <t.zander@nokia.com> on 2010-03-29
Reviewed by Simon Hausmann.

gcc for Symbian doesn't support gcc extensions like atomicity.h - disable

* wtf/Threading.h: also detect os symbian

Canonical link: https://commits.webkit.org/48006@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56712 268f45cc-cd09-0410-ab3c-d52691b4dbfc